--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,7 @@
    "plugins": [
 	"transform-decorators-legacy",
 	["module-resolver", {
-		"root": ["./src/**"],
+		"root": ["./src"],
 	}]
     ]
 }
