--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-youtube')
+    compile project(':react-native-video')
     compile project(':react-native-vector-icons')
     compile project(':react-native-picker')
     compile project(':react-native-fbsdk')
