--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-native-parsed-text": "0.0.20",
     "react-native-picker": "^4.3.7",
     "react-native-popup-dialog": "^0.11.46",
+    "react-native-video": "^3.2.0",
+    "react-native-youtube": "^1.1.0",
     "react-navigation": "^1.0.0-beta.22"
   },
   "devDependencies": {
