--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.44.3",
     "react-native-calendars": "^1.17.7",
     "react-native-camera-roll-picker": "^1.2.3",
+    "react-native-device-info": "^2.3.2",
     "react-native-event-listeners": "^1.0.3",
     "react-native-fbsdk": "^0.8.0",
     "react-native-hyperlink": "0.0.12",
