--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-hyperlink": "0.0.12",
     "react-native-image-picker": "^0.28.0",
     "react-native-image-zoom-viewer": "^2.2.26",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-localization": "^2.0.3",
     "react-native-parsed-text": "0.0.20",
     "react-native-picker": "^4.3.7",
